@@ -1,3 +1,8 @@
+2008-04-16  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/server.rb:  Refresh the source index per request so new
+	gems will be found after server startup.
+
 2008-04-15  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/source_index.rb:  Only print out "Bulk updating" when
